Cleaned up Show
Cleaned up the html for image posts show… Its useable now. Deleted the original posts model and controller because it was working oddly… Things are coming along.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,8 +44,8 @@
           <ul class="bottom-bar-list-right">
             <li class="bottom-bar-link"><a href="/posts">PORTFOLIO</a></li>
             <li class="bottom-bar-link"><a href="/posts">MANA</a></li>
-            <li class="bottom-bar-link"><a href="/posts">PHOTOGRAPHY</a></li>
-            <li class="bottom-bar-link"><a href="/posts">CONTACT</a></li>
+            <li class="bottom-bar-link"><a href="/image_posts/new">PHOTOGRAPHY</a></li>
+            <li class="bottom-bar-link"><a href="/contact">CONTACT</a></li>
           </ul>
         </div>
         <!-- <div class="bottom-bar">
