--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,7 +44,7 @@
           <ul class="bottom-bar-list-right">
             <li class="bottom-bar-link"><a href="/posts">PORTFOLIO</a></li>
             <li class="bottom-bar-link"><a href="/posts">MANA</a></li>
-            <li class="bottom-bar-link"><a href="/image_posts/new">PHOTOGRAPHY</a></li>
+            <li class="bottom-bar-link"><a href="/image_posts_consume">PHOTOGRAPHY</a></li>
             <li class="bottom-bar-link"><a href="/contact">CONTACT</a></li>
           </ul>
         </div>
