--- a/app/assets/stylesheets/consume.scss
+++ b/app/assets/stylesheets/consume.scss
@@ -8,6 +8,16 @@
   margin-bottom: 3px;
 }
 
+.top-bar-link-consume {
+  font-family: "Architects Daughter";
+  display: inline-block;
+  margin-left: 0px;
+  margin-right: 0px;
+  color: white;
+  font-size: 20px;
+  float: left;
+}
+
 .title-consume {
   border-width: 3px;
   border-color: black;
