--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,8 +42,8 @@
             </div>
           </div>
           <ul class="bottom-bar-list-right">
-            <li class="bottom-bar-link"><a href="/posts">PORTFOLIO</a></li>
-            <li class="bottom-bar-link"><a href="/posts">MANA</a></li>
+            <li class="bottom-bar-link"><a href="/portfolio">PORTFOLIO</a></li>
+            <li class="bottom-bar-link"><a href="/blog_posts">MANA</a></li>
             <li class="bottom-bar-link"><a href="/image_posts_consume">PHOTOGRAPHY</a></li>
             <li class="bottom-bar-link"><a href="/contact">CONTACT</a></li>
           </ul>
