--- a/app/views/image_posts/consume.html.erb
+++ b/app/views/image_posts/consume.html.erb
@@ -17,7 +17,7 @@
 
           </div>
           <ul class="top-bar-list">
-            <li class="top-bar-link"><a href="/">Home</a></li>
+            <li class="top-bar-link-consume"><a href="/">Home</a></li>
           </ul>
         </div>
         <hr>
